Adding about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 </head>
 <body>
     {{>header}}
+    <p>This site was created by Yali Sofer. It uses data from mapbox.com</p>
     <img src="./img/mac-img.png" alt="mac">
     {{>footer}}
 </body>
